# nodejs-c-tests

./: .gitignore  README.md  package-lock.json  package.json
ccnx-client/: README.md  ccnx-client.c  ccnx-client.js  ccnx-compilation-cmds.txt
ccnx-client/command-line/: CMakeLists.txt  ccnx-client-loop.c  ccnx-client.c  ccnx-portal-read.c  ccnx-server.c
ccnx-client/command-line/test_build/: ccnx-client  ccnx-server
factorial_c_ffi/: README.md  factorial.js
hello_mike_c_ffi/: README.md  greet.c  greet.js
hello_mike_cpp/: README.md  index.js
simple_math_c_ffi/: binding.gyp  index.js  math.js
simple_math_c_ffi/src/: math.h
src/: greeting.cpp  greeting.h  index.cpp
